Working auth, better cart and some other stuff