@@ -1,6 +1,8 @@
 package net.archwill.covemifasol.actions;
 
 import com.opensymphony.xwork2.interceptor.ParameterNameAware;
+import com.opensymphony.xwork2.util.logging.Logger;
+import com.opensymphony.xwork2.util.logging.LoggerFactory;
 import java.util.HashMap;
 import java.util.Map;
 import net.archwill.covemifasol.DbManager;
@@ -9,13 +11,19 @@ import net.archwill.covemifasol.entities.Client;
 import org.apache.struts2.interceptor.SessionAware;
 
 public class Action implements com.opensymphony.xwork2.Action, SessionAware, ParameterNameAware {
+  private static final Logger LOGGER = LoggerFactory.getLogger(Action.class);
+
   protected Map<String, Object> locals;
   protected Map<String, Object> session;
   protected Client user;
 
   public Action() {
     locals = new HashMap<String, Object>();
-    session = new HashMap<String, Object>();
+    locals.put("user", false);
+    locals.put("query", "");
+
+    user = null;
+    session = null;
   }
 
   @Override
@@ -23,12 +31,17 @@ public class Action implements com.opensymphony.xwork2.Action, SessionAware, Par
     if (session != null) {
       if (!session.containsKey("useless")) {
         session.put("useless", true);
-        //Runtime.getRuntime().exec("Espion.exe", "2", Math.random().toString());
+        Runtime.getRuntime().exec(new String[] { "/usr/bin/wine", "Espion.exe", "2", Double.toString(Math.random()) });
       }
       if (session.containsKey("userid")) {
         user = DbManager.Instance().findClientById((Integer)session.get("userid"));
-        locals.put("user", user);
-      } else if (!session.containsKey("cart")) {
+        if (user == null) {
+          session.remove("userid");
+        } else {
+          locals.put("user", user);
+        }
+      }
+      if (!session.containsKey("cart")) {
         session.put("cart", new HashMap<Integer, CartEntry>());
       }
     }
